@@ -36,6 +36,7 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.FutureTask;
+import java.util.function.Function;
 import javax.swing.Action;
 import javax.swing.BorderFactory;
 import javax.swing.ButtonGroup;
@@ -73,6 +74,7 @@ import org.weasis.core.api.media.data.Thumbnail;
 import org.weasis.core.api.util.FontItem;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.OtherIcon;
+import org.weasis.core.api.util.ResourceUtil.ResourceIconPath;
 import org.weasis.core.ui.docking.PluginTool;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerEvent;
@@ -88,6 +90,7 @@ import org.weasis.core.ui.util.TitleMenuItem;
 import org.weasis.core.ui.util.WrapLayout;
 import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.DicomSpecialElement;
+import org.weasis.dicom.codec.HiddenSeriesManager;
 import org.weasis.dicom.codec.KOSpecialElement;
 import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.TagD.Level;
@@ -128,14 +131,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       new ArrayListComboBoxModel<>(DicomSorter.STUDY_COMPARATOR);
   private final JComboBox<?> patientCombobox = new JComboBox<>(modelPatient);
   private final JComboBox<?> studyCombobox = new JComboBox<>(modelStudy);
-  private final transient ItemListener patientChangeListener =
-      e -> {
-        if (e.getStateChange() == ItemEvent.SELECTED) {
-          selectPatient(getSelectedPatient());
-          selectedPatient.revalidate();
-          selectedPatient.repaint();
-        }
-      };
   private final transient ItemListener studyItemListener =
       e -> {
         if (e.getStateChange() == ItemEvent.SELECTED) {
@@ -165,6 +160,14 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     setDockableWidth(Math.max(thumbnailSize, Thumbnail.DEFAULT_SIZE) + 42);
 
     patientCombobox.setMaximumRowCount(15);
+    ItemListener patientChangeListener =
+        e -> {
+          if (e.getStateChange() == ItemEvent.SELECTED) {
+            selectPatient(getSelectedPatient());
+            selectedPatient.revalidate();
+            selectedPatient.repaint();
+          }
+        };
     patientCombobox.addItemListener(patientChangeListener);
     studyCombobox.setMaximumRowCount(15);
     // do not use addElement
@@ -210,7 +213,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup patient = model.getParent(study, DicomModel.patient);
     List<StudyPane> studies = patient2study.get(patient);
     if (studies != null) {
-      for (int i = 0; i < studies.size(); i++) {
+      for (int i = studies.size() - 1; i >= 0; i--) {
         StudyPane st = studies.get(i);
         if (st.isStudy(study)) {
           studies.remove(i);
@@ -238,7 +241,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup study = model.getParent(series, DicomModel.study);
     List<SeriesPane> seriesList = study2series.get(study);
     if (seriesList != null) {
-      for (int j = 0; j < seriesList.size(); j++) {
+      for (int j = seriesList.size() - 1; j >= 0; j--) {
         SeriesPane se = seriesList.get(j);
         if (se.isSeries(series)) {
           seriesList.remove(j);
@@ -338,8 +341,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       MediaSeriesGroup series = view.getSeries();
       if (series == null) {
         seriesGroup = getSeries(null, null, ListPosition.FIRST);
-        MediaSeriesGroup studyGroup = model.getParent(seriesGroup, DicomModel.study);
-        patientGroup = model.getParent(studyGroup, DicomModel.patient);
       } else {
         MediaSeriesGroup studyGroup = model.getParent(series, DicomModel.study);
         patientGroup = model.getParent(studyGroup, DicomModel.patient);
@@ -347,13 +348,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
 
       if (seriesGroup instanceof MediaSeries<?> dicomSeries) {
-        if (isPatientHasOpenSeries(patientGroup)) {
-          displaySeries(view, seriesGroup);
-        } else {
-          ThumbnailMouseAndKeyAdapter.openSeriesInDefaultPlugin(
-              model, (MediaSeries<? extends MediaElement>) dicomSeries);
-        }
-        return (MediaSeries<? extends MediaElement>) dicomSeries;
+        ThumbnailMouseAndKeyAdapter.openSeriesInDefaultPlugin(
+            model, (MediaSeries<? extends MediaElement>) dicomSeries);
       }
     }
     return null;
@@ -412,7 +408,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   private MediaSeriesGroup getFirstStudy(MediaSeriesGroup patientGroup) {
     List<StudyPane> studyList = getStudyList(patientGroup);
     if (studyList != null && !studyList.isEmpty()) {
-      return studyList.get(0).dicomStudy;
+      return studyList.getFirst().dicomStudy;
     }
     return null;
   }
@@ -530,7 +526,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         for (StudyPane studyPane : studyList) {
           List<SeriesPane> seriesList = study2series.get(studyPane.dicomStudy);
           if (seriesList != null && !seriesList.isEmpty()) {
-            return seriesList.get(0).sequence;
+            return seriesList.getFirst().sequence;
           }
         }
       }
@@ -656,8 +652,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     private void refreshLayout() {
       this.setLayout(
           verticalLayout
-              ? new MigLayout("fillx, flowy, insets 0", "[fill]")
-              : new MigLayout("fillx, flowx, insets 0", "[fill]"));
+              ? new MigLayout("fillx, flowy, insets 0", "[fill]") // NON-NLS
+              : new MigLayout("fillx, flowx, insets 0", "[fill]")); // NON-NLS
       List<StudyPane> studies = getStudyPaneList();
       super.removeAll();
       for (StudyPane studyPane : studies) {
@@ -711,17 +707,33 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       this.setBorder(
           BorderFactory.createCompoundBorder(GuiUtils.getEmptyBorder(0, 3, 0, 3), title));
       this.setFocusable(false);
-      this.add(sub, "shrinky 100");
+      this.add(sub, "shrinky 100"); // NON-NLS
       this.addComponentListener(
           new ComponentAdapter() {
             @Override
             public void componentResized(ComponentEvent e) {
-              WrapLayout wl = (WrapLayout) sub.getLayout();
-              sub.setPreferredSize(wl.preferredLayoutSize(sub));
+              refreshLayout();
               StudyPane.this.revalidate();
               StudyPane.this.getParent().repaint();
             }
           });
+    }
+
+    @Override
+    public void remove(int index) {
+      sub.remove(index);
+      refreshLayout();
+    }
+
+    @Override
+    public void remove(Component comp) {
+      sub.remove(comp);
+      refreshLayout();
+    }
+
+    public void refreshLayout() {
+      WrapLayout wl = (WrapLayout) sub.getLayout();
+      sub.setPreferredSize(wl.preferredLayoutSize(sub));
     }
 
     public boolean isSeriesVisible(MediaSeriesGroup series) {
@@ -786,7 +798,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     public SeriesPane(MediaSeriesGroup sequence) {
       this.sequence = Objects.requireNonNull(sequence);
-      this.setLayout(new MigLayout("wrap 1", "[center]"));
+      this.setLayout(new MigLayout("wrap 1, insets 0", "[center]")); // NON-NLS
       this.setBackground(FlatUIUtils.getUIColor(SeriesSelectionModel.BACKGROUND, Color.LIGHT_GRAY));
       int thumbnailSize =
           GuiUtils.getUICore()
@@ -871,7 +883,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
                 selectedPatient == null ? null : selectedPatient.patient;
             if (patient != null && e.getSource() instanceof JButton button) {
               List<KOSpecialElement> list =
-                  DicomModel.getHiddenSpecialElements(patient, KOSpecialElement.class);
+                  HiddenSeriesManager.getHiddenElementsFromPatient(KOSpecialElement.class, patient);
               if (!list.isEmpty()) {
                 if (list.size() == 1) {
                   model.openRelatedSeries(list.getFirst(), patient);
@@ -922,7 +934,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public boolean isPatientHasOpenSeries(MediaSeriesGroup patient) {
-
     synchronized (model) {
       for (MediaSeriesGroup study : model.getChildren(patient)) {
         for (MediaSeriesGroup seq : model.getChildren(study)) {
@@ -954,7 +965,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       studyCombobox.addItemListener(studyItemListener);
       selectStudy();
-      koOpen.setVisible(DicomModel.hasHiddenSpecialElements(patient, KOSpecialElement.class));
+      koOpen.setVisible(
+          HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
       // Send message for selecting related plug-ins window
       model.firePropertyChange(
           new ObservableEvent(ObservableEvent.BasicAction.SELECT, model, null, patient));
@@ -1027,9 +1039,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           k++;
         }
       }
-
       studyPane.revalidate();
       studyPane.repaint();
+      changeToolWindowAnchor(getDockable().getBaseLocation());
     } else {
       int k = 1;
       for (SeriesPane s : seriesList) {
@@ -1174,7 +1186,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         if (ObservableEvent.BasicAction.SELECT.equals(action)) {
           if (newVal instanceof Series dcm) {
             MediaSeriesGroup patient = model.getParent(dcm, DicomModel.patient);
-            if (!isSelectedPatient(patient)) {
+            if (!isSelectedPatient(patient) && modelPatient.getIndexOf(patient) >= 0) {
               modelPatient.setSelectedItem(patient);
               GuiUtils.getUICore()
                   .getDockingControl()
@@ -1234,7 +1246,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
             MediaSeriesGroupNode patient = getSelectedPatient();
             if (patient != null) {
               koOpen.setVisible(
-                  DicomModel.hasHiddenSpecialElements(patient, KOSpecialElement.class));
+                  HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
             }
           }
         } else if (ObservableEvent.BasicAction.LOADING_START.equals(action)) {
@@ -1248,13 +1260,15 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           }
           MediaSeriesGroupNode patient = getSelectedPatient();
           if (patient != null) {
-            koOpen.setVisible(DicomModel.hasHiddenSpecialElements(patient, KOSpecialElement.class));
+            koOpen.setVisible(
+                HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
           }
         }
       } else if (evt.getSource() instanceof SeriesViewer
           && ObservableEvent.BasicAction.SELECT.equals(action)
           && newVal instanceof MediaSeriesGroup patient
-          && !isSelectedPatient(patient)) {
+          && !isSelectedPatient(patient)
+          && modelPatient.getIndexOf(patient) >= 0) {
         modelPatient.setSelectedItem(patient);
         // focus get back to viewer
         if (evt.getSource() instanceof ViewerPlugin viewerPlugin) {
@@ -1307,32 +1321,31 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public synchronized void addTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              loadingPanel.addTask(task);
-              revalidate();
-              repaint();
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          loadingPanel.addTask(task);
+          revalidate();
+          repaint();
+        });
   }
 
   public synchronized void removeTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              if (loadingPanel.removeTask(task)) {
-                revalidate();
-                repaint();
-              }
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          if (loadingPanel.removeTask(task)) {
+            revalidate();
+            repaint();
+          }
+        });
   }
 
   public static SeriesThumbnail createThumbnail(
-      final Series series, final DicomModel dicomModel, final int thumbnailSize) {
+      final Series<?> series, final DicomModel dicomModel, final int thumbnailSize) {
 
     Callable<SeriesThumbnail> callable =
         () -> {
-          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize);
+          Function<String, Set<ResourceIconPath>> drawIcons = HiddenSeriesManager::getRelatedIcons;
+          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize, drawIcons);
           if (series.getSeriesLoader() instanceof LoadSeries loader) {
             // In case series is downloaded or canceled
             thumb.setProgressBar(loader.isDone() ? null : loader.getProgressBar());
@@ -1345,7 +1358,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           return thumb;
         };
     FutureTask<SeriesThumbnail> future = new FutureTask<>(callable);
-    GuiExecutor.instance().invokeAndWait(future);
+    GuiExecutor.invokeAndWait(future);
     SeriesThumbnail result = null;
     try {
       result = future.get();
